--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <marquee behavior="scroll" direction="left" scrollamount="20"><font color="gray" size="9px">Ciallo～(∠・ω&lt; )⌒★</font></marquee>
     </div>
     <div id="main" class="center">
-        <img src="ciallo.gif">
+        <img src="./ciallo.gif">
     </div>
 
 
