--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <title>Ciallo～(∠・ω&lt; )⌒★</title>
-    <link rel="shortcut icon" href="file:///C:/favicon.ico">
+    <link rel="shortcut icon" href="./favicon.ico">
 <style>
     .center {
         width: 540px;
